--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
+    "@mui/x-data-grid": "^6.19.4",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
+    "react-virtuoso": "^4.6.3",
     "sass": "^1.70.0",
     "styled-components": "^6.1.8"
   },
